# smart_calculator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: calculator-ci.yml
src/: calculator.cpp  calculator.hpp  history.cpp  history.hpp  main.cpp  parser.cpp  parser.hpp
tests/: parser_tests.cpp
